--- a/WebContent/css/accommodationList/hotelList.css
+++ b/WebContent/css/accommodationList/hotelList.css
@@ -8,30 +8,61 @@
 }
     /* ---------사이드---------- */
     .container .aside{
-        width: 200px;
-        height: 460px;
+        width: 210px;
+        height: 500px;
         margin-top: 40px;
         margin-right: 15px;
         border: 1px solid #fc0453;
         padding-left: 5px;
+        
         position: sticky;
         top: 72px;
     }
     .aside .head-counter .form-option {
         width: 60px;
         padding-left: 20px;
+        
     }
 
+    .container .aside h1{
+        font-size: 20px;
+        font-weight: bold;
+        padding-top: 2px;
+        /* padding-bottom: 5px; */
+        
+    }
+    /* .container .aside div{
+        padding-bottom: 5px;
+        border-bottom: 0.5px solid #fc0453;
+    }
+    .container .aside form{
+        padding-bottom: 5px;
+        border-bottom: 0.5px solid #fc0453;
+    } */
+    .container .aside .btn{
+        /* display: flex; */
+        background-color: white;
+        border-radius: 20px;
+        border: 0.5px solid black;
+        cursor: pointer;
+        color: black;
+        padding: 0px 10px;
+        text-decoration: none;
+        font-size: 18px;
+        height: 30px;
+        width: 90px;
+        
+    }
 
     /* ---------메인---------- */
     .container .main{
         width: 638px;
-        margin-top: 15px;
+        margin-top: 30px;
     }
-        .main .location ul{
+        /* .main .location ul{
             display: flex;
             justify-content: flex-end;
-        }
+        } */
         .picked-item-sec > h1{
             width: 500px;
             font-weight: bold;
