--- a/WebContent/css/user/userInfo/updateInfo.css
+++ b/WebContent/css/user/userInfo/updateInfo.css
@@ -146,7 +146,7 @@
                     .main .update-form-sec .reg-form-container> .reg-form-item>.discorrect{
                         height: 52px;
                     }
-                        .email,.password,.password-check,.phone,.name{
+                        .email,.password,.password-check,.phone,.name,.birthday{
                             width: 300px;
                             height: 30px;
                             border: 1px solid gray;
