--- a/WebContent/css/admin/QnA/list.css
+++ b/WebContent/css/admin/QnA/list.css
@@ -68,3 +68,37 @@
                             margin: 0 5px 0 5px;
                         }
 /********************************************/
+.main .pager-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+    .main .pager-container .pager-list {
+        display: flex;
+    }
+
+        .main .pager-container .pager-list li {
+            margin-left: 15px;
+        }
+
+        .main .pager-container .pager-list li:last-child {
+            margin-right: 15px;
+        }
+        
+        .main .pager-container .pager-list .active-page {
+            color: #fc0453;
+            font-weight: bold;
+        }
+
+        .main .pager-container .pager-list li a {
+            text-decoration: none;
+        }
+
+        .main .pager-container .pager-list li a:hover {
+            color: #fc0453;
+        }
+
+    .main .pager-container .btn a {
+        text-decoration: none;
+    }
