--- a/WebContent/css/user/userInfo/memberInfo.css
+++ b/WebContent/css/user/userInfo/memberInfo.css
@@ -68,7 +68,10 @@
                 justify-content: flex-end;
                 font-size: 12px;
             }
-
+			.member-info-sec{
+				width:500px;
+				margin: 0 auto;
+			}
             .member-info-sec>h1{
                 width: 500px;
                 font-weight: bold;
@@ -76,7 +79,7 @@
                 margin: 50px 0 30px 0;
             }
             .member-info-sec>div:nth-child(2){
-                margin-top: 100px;
+                margin-top: 70px;
                 display: flex;
                 align-items: flex-end;
             }
@@ -90,8 +93,62 @@
             .member-info-sec>div:nth-child(3){
                 margin-top: 10px;
             }
-            
+            	.member-info-sec>div:nth-child(3)>div>div>div>input{
+            		width:250px;
+            	}
 
 
 
 /********************************************/
+
+.reg-form-item>.input-box{
+	height: 30px;
+    overflow: hidden;
+}
+	.reg-form-item>.input-box>div{
+		display: flex;
+        flex-direction: column;
+	}
+.reg-form-item>.discorrect{
+	height: 52px;
+}
+.reg-form-item .caution-mention{
+	color: red;
+    font-size: 12px;
+}
+
+.password{
+	width: 300px;
+    height: 30px;
+    border: 1px solid gray;
+    padding-left: 10px;
+}
+.pass{
+    border-color: #5f0081;
+}
+
+
+
+.button-submit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px 0;
+    width:250px;
+}
+    .button-submit>button{
+        width: 100%;
+        color: white;
+        font-size: 16px;
+        background-color: #5f0081;
+        border: 1px solid #5f0081;
+        border-radius: 15px;
+        cursor: pointer;
+        padding: 10px 0;
+    }
+    .button-submit>button.disabled{
+        opacity: 0.5;
+        cursor: initial;
+    }
