--- a/WebContent/css/admin/notice/list.css
+++ b/WebContent/css/admin/notice/list.css
@@ -22,7 +22,7 @@
 		    font-size: 20px;
 
 		}
-        .main .list-board>table{
+        .main .list-board>form>table{
             border-top: 2px solid #5f005f;
             table-layout: fixed;
             width: 900px;
@@ -30,36 +30,36 @@
             margin: 10px 0 0 0px;
         }
 
-            .main .list-board > table > thead {
+            .main .list-board>form > table > thead {
                 background: #f5f5f5;
             }
 
-                .main .list-board >table tr{
+                .main .list-board>form >table tr{
                     height: 40px;
                     line-height: 40px;  
                 }
             
-                    .main .list-board >table tr td{
+                    .main .list-board>form >table tr td{
                         text-align: center;
                         border-bottom: 1px solid #e9e9e9;
                         
                     }
-                    .main .list-board>table tr td.col-s{
+                    .main .list-board>form>table tr td.col-s{
                         width: 60px;
                     }
-                    .main .list-board > table td.col-sm { 
+                    .main .list-board >form> table td.col-sm { 
                         width: 100px;
                     }
-                    .main .list-board>table tr td.col-m{
+                    .main .list-board>form>table tr td.col-m{
                         width: 200px;
                     }
-                    .main .list-board > table .btn-delete>td{
+                    .main .list-board>form > table .btn-delete>td{
                         text-align: right;
                         padding-right: 15px;
                         border-bottom: none;
                         
                     }
-                    .main .list-board > table .btn-delete input[type=submit]{
+                    .main .list-board >form> table .btn-delete input[type=submit]{
                         width: 80px;
                         height: 25px;
                         margin: 0 5px 0 5px;
