--- a/WebContent/css/company/userInfo/updateInfo.css
+++ b/WebContent/css/company/userInfo/updateInfo.css
@@ -78,7 +78,7 @@
                 .update-info-sec>div{
                     padding: 50px 100px;
                 }
-                    .update-info-sec>div>form{
+                    /* .update-info-sec>div>form{
                         margin:0 auto;
 
                     }
@@ -92,11 +92,11 @@
                             width: 200px;
                             margin: 10px 0;
                             height: 30px;
-                            border: 1px dashed #ff0080;    /*---테두리 정의---*/
-                            background-Color:#ffe6f2;   /*--백그라운드 정의---*/
-                            font:12px 굴림;      /*--폰트 정의---*/
-                            font-weight:bold;   /*--폰트 굵기---*/
-                            color:#ff0080;    /*--폰트 색깔---*/
+                            border: 1px dashed #ff0080;    
+                            background-Color:#ffe6f2;   
+                            font:12px 굴림;     
+                            font-weight:bold;   
+                            color:#ff0080;    
                         }
             
                     .member-type{
@@ -133,6 +133,114 @@
                     .checkbox-container > input[type="radio"]:checked + label span {
                         background: url(/images/checkbox-bold.svg) -30px top no-repeat;
                         background-size: cover;
-                    }
+                    } */
 
+                    .main .update-form-sec .reg-form-container> .reg-form-item>.input-box{
+                        height: 30px;
+                        overflow: hidden;
+                    }
+                        .main .update-form-sec .reg-form-container> .reg-form-item>.input-box>div{
+                            display: flex;
+                            flex-direction: column;
+                        }
+                    .main .update-form-sec .reg-form-container> .reg-form-item>.discorrect{
+                        height: 52px;
+                    }
+                        .email,.password,.password-check,.phone,.name,.birthday{
+                            width: 300px;
+                            height: 30px;
+                            border: 1px solid gray;
+                            padding-left: 10px;
+                        }
+                        .pass{
+                            border-color: #5f0081;
+                        }
+    
+    
+                        .member-type{
+                            display: flex;
+                            padding-left: 50px;
+                        }
+                            .member-type>div{
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                            }
+                        .checkbox-container {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            justify-content: center;
+                            --border: 1px solid rgb(0, 132, 255);
+                        }
+                        
+                        .checkbox-container > input[type="radio"] {
+                            display: none;
+                        }
+    
+                        .checkbox-container > input[type="radio"] + label span {
+                            display: inline-block;
+                            width: 30px;
+                            height: 30px;
+                            --margin: -2px 10px 0 0;
+                            vertical-align: middle;
+                            background: url(/images/checkbox-bold.svg) left top no-repeat;
+                            cursor: pointer;
+                            background-size: cover;
+                        }
+    
+                        .checkbox-container > input[type="radio"]:checked + label span {
+                            background: url(/images/checkbox-bold.svg) -30px top no-repeat;
+                            background-size: cover;
+                        }
+    
+                /* .breadcrumb > .breadcrumb-list {
+                    display: flex;
+                    justify-content: flex-end;
+                    font-size: 12px;
+                } */
+                .update-form-sec{
+                    min-height: 300px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    position: relative;
+                }
+                    .update-form-sec>.reg-form-bg{
+                        height: 500px;
+                        width: 820px;
+                        background-color: #5f0081;
+                        opacity: 0.16;
+                        position: absolute;
+                    }
+                    .update-form-sec .reg-form-container>.reg-form-item .caution-mention{
+                        color: red;
+                        font-size: 12px;
+                    }
+    
+    
+                    .button-submit{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        margin-top: 20px;
+                        margin-bottom: 20px;
+                        padding: 10px 0;
+                    }
+                        .button-submit>input{
+                            width: 100%;
+                            color: white;
+                            font-size: 16px;
+                            background-color: #5f0081;
+                            border: 1px solid #5f0081;
+                            border-radius: 15px;
+                            padding: 10px 0;
+                            cursor: pointer;
+                        }
+                        .button-submit>input.disabled{
+                            opacity: 0.5;
+                            cursor: initial;
+                        }
+    
 /********************************************/
