--- a/WebContent/css/accommodationList/detail.css
+++ b/WebContent/css/accommodationList/detail.css
@@ -13,6 +13,9 @@ margin: 50px auto 0px auto;
             height: 360px;
             overflow: hidden;
         }
+        .main .title .main-image img{
+            object-fit: fill;
+        }
         .main .title .pic .cliper-btn{
             width: 20px;
             height: 20px;
@@ -22,19 +25,18 @@ margin: 50px auto 0px auto;
             cursor: pointer;
             color: rgba(255, 255, 255, 0.5);
         }
-        .pic .prev-btn{
-            top: 280px;
+        /* .pic .prev-btn{
+            top: 180px;
             left: 500px;
         }
         .pic .next-btn {
             top: 280px;
             left: 915px;
-        }
+        } */
         .main .title .cliper{
             border: 1px solid black;
             width: 500px;
             height: 100px;
-            overflow: hidden;
             position: relative;
             
         }
@@ -51,14 +53,12 @@ margin: 50px auto 0px auto;
                 overflow: hidden;
                 flex-basis: 100px;
                 flex-shrink: 0;
-                
-                
             }
-            ul li img{
-                object-fit: fill;
-                width :100px;
-                height: 100px;
-            }
+                .cliper ul li img{
+                    object-fit: fill;
+                    width :100px;
+                    height: 100px;
+                }
         .main .title .main-info{
             margin-left: 40px;
         }
@@ -82,6 +82,7 @@ margin: 50px auto 0px auto;
         }
         .main .title .main-info .rule{
             font-size: 15px;
+            padding-top: 80px;
             padding-bottom: 10px;
             margin: auto 0px;
         }
@@ -312,3 +313,24 @@ margin: 50px auto 0px auto;
                         .room-form > .submit-btn-container > .submit-btn:hover {
                             opacity: 0.7;
                         }
+                .goodsonmylist-box{
+                    width: 1100px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    position: fixed;
+                    top: 600px;
+                }
+                .goodsonmylist-box .goodsonmylist{
+                    /* border: 1px solid  #fc0453; */
+                    width: 80px;
+                    height: 25px;
+                    background: white;
+                    color : black;
+                    margin-left: auto;
+                    font-size: 20px;
+                    
+                }
+                .goodsonmylist a:hover{
+                    background: white;
+                    color:  #fc0453;
+                }
