--- a/WebContent/css/accommodationList/detail.css
+++ b/WebContent/css/accommodationList/detail.css
@@ -333,4 +333,8 @@ margin: 50px auto 0px auto;
                 .goodsonmylist a:hover{
                     background: white;
                     color:  #fc0453;
+                    text-decoration:blink
                 }
+img{
+    object-fit :fill;
+}
