--- a/WebContent/css/user/userInfo/proposalList.css
+++ b/WebContent/css/user/userInfo/proposalList.css
@@ -80,7 +80,7 @@
             
                 .main>div:first-child{
                     padding-top: 30px;
-                    text-indent: 100px;
+                    --text-indent: 100px;
                 }
                 .main>div:nth-child(2){
                     display: flex;
