--- a/WebContent/css/company/reverseOffer/detail.css
+++ b/WebContent/css/company/reverseOffer/detail.css
@@ -140,7 +140,7 @@
                             }
 /**********************************/
             .offer-sec {
-                border: 1px solid red;
+                --border: 1px solid red;
                 margin: 70px auto 0 auto;
             }
 
@@ -153,7 +153,7 @@
                 }
 
                 .offer-form {
-                    border: 1px solid blue;
+                    --border: 1px solid blue;
                     margin: 20px 0px 0 30px;
                 }
 
@@ -173,7 +173,7 @@
                         .offer-form > section > .offer-container {
                             flex-grow: 10;
                             display: flex;
-                            border: 1px solid red;
+                            --border: 1px solid red;
                             padding-left: 10px;
                             width: 500px
                         }
