--- a/WebContent/css/user/userInfo/reservationInfo.css
+++ b/WebContent/css/user/userInfo/reservationInfo.css
@@ -103,3 +103,19 @@
 
 
 /********************************************/
+.btn-more-sec{
+	width:650px;
+	display:flex;
+	justify-content:center;
+}
+.btn-more{
+	margin-top:20px;
+    padding:0;
+    text-align : center;
+    width:790px;
+    height:50px;
+    line-height:50px;
+    font-size:24px;
+    opacity:0.5;
+    cursor:pointer;
+}
