--- a/WebContent/css/accommodationList/list.css
+++ b/WebContent/css/accommodationList/list.css
@@ -9,14 +9,19 @@
     /* ---------사이드---------- */
     .container .aside{
         width: 210px;
-        height: 500px;
-        margin-top: 40px;
+        height: 510px;
+        margin-top: 155px;
         margin-right: 15px;
-        border: 1px solid #fc0453;
+        border: 1px solid rgba(44, 50, 56, 0.5);
         padding-left: 5px;
-        
         position: sticky;
         top: 72px;
+    }
+    .aside .big-city{
+        width: 50px;
+    }
+    .aside .small-city{
+        width: 100px;
     }
     .aside .head-counter .form-option {
         width: 60px;
@@ -41,28 +46,39 @@
     } */
     .container .aside .btn{
         /* display: flex; */
-        background-color: white;
-        border-radius: 20px;
-        border: 0.5px solid black;
+        border-radius: 10px;
         cursor: pointer;
-        color: black;
         padding: 0px 10px;
-        text-decoration: none;
         font-size: 18px;
         height: 30px;
         width: 90px;
-        
     }
-
+    .container .aside .app-btn{
+    color: white;
+    background: #fc0453;
+    border: 1px solid #fc0453;
+    }
+    .container .aside .init-btn{
+        color: #fc0453;
+        background: white;
+        border: 1px solid #fc0453;
+        }
     /* ---------메인---------- */
     .container .main{
         width: 638px;
         margin-top: 30px;
     }
-        /* .main .location ul{
-            display: flex;
-            justify-content: flex-end;
-        } */
+        .main .main-header{
+            width: 600px;
+            margin: 50px auto 0px auto;
+            border-bottom: 3px solid black;
+            font-weight: bold;
+            font-size: 28px;
+            padding-bottom: 10px;
+        }
+    .picked-item-sec{
+        margin-top: 20px;
+    }
         .picked-item-sec > h1{
             width: 500px;
             font-weight: bold;
