--- a/WebContent/css/admin/accommodations/list.css
+++ b/WebContent/css/admin/accommodations/list.css
@@ -152,6 +152,7 @@ footer div p{
     padding-bottom: 10px;
 }
 /* -------------------------------------- */
+
 .main .sub-container h1 {
 font-size: 20px;
 margin: 30px 0 0 30px;
@@ -206,37 +207,37 @@ margin: 30px 0 0 30px;
                 border-bottom: 1px solid #ffffff;
             }
 
-            .pager-container {
+            .main .pager-container {
                 display: flex;
                 justify-content: center;
                 margin-top: 20px;
             }
             
-                .pager-container .pager-list {
+                .main .pager-container .pager-list {
                     display: flex;
                 }
             
-                    .pager-container .pager-list li {
+                    .main .pager-container .pager-list li {
                         margin-left: 15px;
                     }
             
-                    .pager-container .pager-list li:last-child {
+                    .main .pager-container .pager-list li:last-child {
                         margin-right: 15px;
                     }
                     
-                    .pager-container .pager-list .active-page {
+                    .main .pager-container .pager-list .active-page {
                         color: #fc0453;
                         font-weight: bold;
                     }
             
-                    .pager-container .pager-list li a {
+                    .main .pager-container .pager-list li a {
                         text-decoration: none;
                     }
             
-                    .pager-container .pager-list li a:hover {
+                    .main .pager-container .pager-list li a:hover {
                         color: #fc0453;
                     }
             
-                .pager-container .btn a {
+                .main .pager-container .btn a {
                     text-decoration: none;
                 }
